src/objects/Vision_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This lookup mentions the related account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vision Opportunities</relationshipLabel>
        <relationshipName>Vision_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the lookup to contact that is identified as the customer.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vision Opportunities</relationshipLabel>
        <relationshipName>Vision_Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>LeadSource</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id. Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perception Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vision_Opportunity_Name__c</fullName>
        <inlineHelpText>This is the name of the vision opportunity.</inlineHelpText>
        <label>Vision Opportunity Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vision Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vision_Opportunity_Name__c</columns>
        <columns>Stage_Name__c</columns>
        <columns>Customer__c</columns>
        <columns>LeadSource__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{000}</displayFormat>
        <label>Vision Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vision Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>